# RuQualBench

./: .env.example  .gitignore  LICENSE  README.md  base_bench_250.json  create_data.ipynb  debug_bench_3.json  evaluate_judge.py  extract_dataset.py  generate_leaderboard.py  large_bench_500.json  lite_bench_100.json  main.py  pyproject.toml  render_debug.py  style.css  v2_lite.json
benchmark/: base.py  cycle_detection.py  judge_v2.py  transport.py  utils.py  v1.py  v2.py
judge_evals/: judge_eval_2025-12-12_09-36-18_litellm_proxy_gemini-2.5-flash.json  judge_eval_2025-12-12_09-53-22_litellm_proxy_gemini-2.5-flash-preview-09-2025.json
logs/: benchmark_2025-10-17_15-17-05_run_1_lite.json  benchmark_2025-10-17_15-17-05_run_2_lite.json  benchmark_2025-10-17_15-17-05_run_3_lite.json  benchmark_2025-10-17_15-17-05_run_4_lite.json  benchmark_2025-10-17_15-17-05_run_5_lite.json  benchmark_2025-10-17_16-36-08_run_1_lite.json  benchmark_2025-10-17_16-36-08_run_2_lite.json  benchmark_2025-10-17_16-36-08_run_3_lite.json  benchmark_2025-10-20_14-21-28_run_1_lite.json  benchmark_2025-10-20_14-21-28_run_2_lite.json  benchmark_2025-10-20_14-21-28_run_3_lite.json  benchmark_2025-10-20_14-53-00_run_1_lite.json  benchmark_2025-10-20_14-53-00_run_2_lite.json  benchmark_2025-10-20_14-53-00_run_3_lite.json  benchmark_2025-10-20_15-38-30_run_1_lite.json  benchmark_2025-10-20_15-38-30_run_2_lite.json  benchmark_2025-10-20_15-38-30_run_3_lite.json  benchmark_2025-10-20_16-03-00_run_1_lite.json  benchmark_2025-10-20_16-03-00_run_2_lite.json  benchmark_2025-10-20_16-03-00_run_3_lite.json  (+211 more)
(+62 files in other folders)
