[project]
name = "ruqualbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "fast-langdetect>=1.0.0",
    "hf-xet>=1.1.10",
    "jinja2>=3.1.6",
    "litellm>=1.78.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
]
